@@ -1,0 +1,8 @@
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=http://localhost/tc_follow_meta_loop_2.html">
+  </head>
+  <body>
+    This page has a meta refresh.
+  </body>
+</html>
