@@ -13,6 +13,7 @@
     one, to avoid dealing with quoting rules of RFC 2617.  Fixes failures in
     #231 due to net-http-digest_auth 1.2.1
   * Fixed Content-Disposition parameter parser to be case insensitive. #233
+  * Fixed redirection counting in following meta refresh. #240
 
 === 2.5.1
 
